<resources>
	<string name="app_name">Loci2  Andriod</string>
	<string name="join_agame2_activity_group_five_text_view_hint">9:41 AM</string>
	<string name="join_agame2_activity_types_of_games_text_view_text">Types of Games</string>
	<string name="join_agame2_activity_group_two_text_view_text">9:41 AM</string>
	<string name="join_agame2_activity_where_do_you_want_to_text_view_hint">Where do you want to play?</string>
	<string name="join_agame2_activity_types_of_games_text_view_hint">Types of Games</string>
	<string name="join_agame2_activity_group_text_view_text">42%</string>
	<string name="join_agame2_activity_group_six_text_view_hint">Vodacom</string>
	<string name="join_agame2_activity_join_agame_text_view_hint">JOIN A GAME</string>
	<string name="join_agame2_activity_group_four_text_view_hint">42%</string>
	<string name="join_agame2_activity_group_four_text_view_text">42%</string>
	<string name="join_agame2_activity_location_text_view_hint">LOCATION</string>
	<string name="join_agame2_activity_group_three_text_view_hint">Vodacom</string>
	<string name="join_agame2_activity_reset_filters_button_text">RESET FILTERS</string>
	<string name="join_agame2_activity_apply_filters_button_hint">SEARCH FOR GAME</string>
	<string name="join_agame2_activity_group_five_text_view_text">9:41 AM</string>
	<string name="join_agame2_activity_apply_filters_button_text">SEARCH FOR GAME</string>
	<string name="join_agame2_activity_location_text_view_text">LOCATION</string>
	<string name="join_agame2_activity_group_six_text_view_text">Vodacom</string>
	<string name="join_agame2_activity_group_two_text_view_hint">9:41 AM</string>
	<string name="join_agame2_activity_reset_filters_button_hint">RESET FILTERS</string>
	<string name="join_agame2_activity_group_three_text_view_text">Vodacom</string>
	<string name="join_agame2_activity_where_do_you_want_to_text_view_text">Where do you want to play?</string>
	<string name="join_agame2_activity_join_agame_text_view_text">JOIN A GAME</string>
	<string name="join_agame2_activity_group_text_view_hint">42%</string>
	<string name="game_listing_activity_onwards_four_text_view_hint">Onwards</string>
	<string name="game_listing_activity_horse_shoe_text_view_text">Horse Shoe</string>
	<string name="game_listing_activity_players_text_view_text">10 Players</string>
	<string name="game_listing_activity_pm_text_view_hint">2pm</string>
	<string name="game_listing_activity_onwards_two_text_view_hint">Onwards</string>
	<string name="game_listing_activity_mon14_dec_text_view_hint">Mon, 14 Dec</string>
	<string name="game_listing_activity_windsail_text_view_hint">WindSail</string>
	<string name="game_listing_activity_cape_town_text_view_hint">Cape Town</string>
	<string name="game_listing_activity_greenbushes_text_view_hint">Greenbushes</string>
	<string name="game_listing_activity_search_results_text_view_hint">50 Search Results</string>
	<string name="game_listing_activity_onwards_three_text_view_text">Onwards</string>
	<string name="game_listing_activity_onwards_two_text_view_text">Onwards</string>
	<string name="game_listing_activity_mountain_side_text_view_text">Mountain Side</string>
	<string name="game_listing_activity_results_two_text_view_text">6 Results</string>
	<string name="game_listing_activity_horse_shoe_text_view_hint">Horse Shoe</string>
	<string name="game_listing_activity_search_results_text_view_text">50 Search Results</string>
	<string name="game_listing_activity_onwards_text_view_text">Onwards</string>
	<string name="game_listing_activity_greenbushes_text_view_text">Greenbushes</string>
	<string name="game_listing_activity_am_text_view_hint">11am</string>
	<string name="game_listing_activity_onwards_four_text_view_text">Onwards</string>
	<string name="game_listing_activity_pm_two_text_view_hint">4pm</string>
	<string name="game_listing_activity_green_mountain_text_view_text">Green Mountain</string>
	<string name="game_listing_activity_mountain_side_text_view_hint">Mountain Side</string>
	<string name="game_listing_activity_pm_three_text_view_text">6pm</string>
	<string name="game_listing_activity_pm_three_text_view_hint">6pm</string>
	<string name="game_listing_activity_game_listing_text_view_hint">Game Listing</string>
	<string name="game_listing_activity_am_text_view_text">11am</string>
	<string name="game_listing_activity_green_mountain_text_view_hint">Green Mountain</string>
	<string name="game_listing_activity_players_two_text_view_hint">9 Players</string>
	<string name="game_listing_activity_pm_text_view_text">2pm</string>
	<string name="game_listing_activity_onwards_three_text_view_hint">Onwards</string>
	<string name="game_listing_activity_cape_town_text_view_text">Cape Town</string>
	<string name="game_listing_activity_game_listing_text_view_text">Game Listing</string>
	<string name="game_listing_activity_windsail_text_view_text">WindSail</string>
	<string name="game_listing_activity_results_text_view_hint">12 Results</string>
	<string name="game_listing_activity_pm_two_text_view_text">4pm</string>
	<string name="game_listing_activity_players_text_view_hint">10 Players</string>
	<string name="game_listing_activity_onwards_text_view_hint">Onwards</string>
	<string name="game_listing_activity_players_two_text_view_text">9 Players</string>
	<string name="game_listing_activity_results_text_view_text">12 Results</string>
	<string name="game_listing_activity_results_two_text_view_hint">6 Results</string>
	<string name="game_listing_activity_mon14_dec_text_view_text">Mon, 14 Dec</string>
	<string name="dashboard_activity_group_four_text_view_text">42%</string>
	<string name="dashboard_activity_group_two_text_view_hint">9:41 AM</string>
	<string name="dashboard_activity_group_three_text_view_hint">Vodacom</string>
	<string name="dashboard_activity_continue_button_hint">CREATE A GAME </string>
	<string name="dashboard_activity_group_five_text_view_hint">9:41 AM</string>
	<string name="dashboard_activity_continue_three_button_text">INBOX</string>
	<string name="dashboard_activity_dashboard_text_view_text">Dashboard</string>
	<string name="dashboard_activity_group_two_text_view_text">9:41 AM</string>
	<string name="dashboard_activity_group_text_view_hint">42%</string>
	<string name="dashboard_activity_log_out_text_view_hint">LOG OUT</string>
	<string name="dashboard_activity_continue_two_button_text">JOIN A GAME </string>
	<string name="dashboard_activity_group_text_view_text">42%</string>
	<string name="dashboard_activity_group_four_text_view_hint">42%</string>
	<string name="dashboard_activity_continue_four_button_hint">UPCOMING MATCHES</string>
	<string name="dashboard_activity_group_three_text_view_text">Vodacom</string>
	<string name="dashboard_activity_continue_four_button_text">UPCOMING MATCHES</string>
	<string name="dashboard_activity_log_out_text_view_text">LOG OUT</string>
	<string name="dashboard_activity_group_five_text_view_text">9:41 AM</string>
	<string name="dashboard_activity_continue_button_text">CREATE A GAME </string>
	<string name="dashboard_activity_joe_soap_text_view_hint">Joe Soap</string>
	<string name="dashboard_activity_joe_soap_text_view_text">Joe Soap</string>
	<string name="dashboard_activity_dashboard_text_view_hint">Dashboard</string>
	<string name="dashboard_activity_continue_two_button_hint">JOIN A GAME </string>
	<string name="dashboard_activity_continue_three_button_hint">INBOX</string>
	<string name="dashboard_activity_group_six_text_view_text">Vodacom</string>
	<string name="dashboard_activity_group_six_text_view_hint">Vodacom</string>
	<string name="game_created_activity_button_button_text">Click me</string>
	<string name="game_created_activity_group_text_view_text">42%</string>
	<string name="game_created_activity_group_six_text_view_hint">Vodacom</string>
	<string name="game_created_activity_game_creator_text_view_text">Game Creator</string>
	<string name="game_created_activity_group_four_text_view_text">42%</string>
	<string name="game_created_activity_group_two_text_view_text">9:41 AM</string>
	<string name="game_created_activity_return_to_dashboard_text_view_text">RETURN TO DASHBOARD</string>
	<string name="game_created_activity_group_text_view_hint">42%</string>
	<string name="game_created_activity_button_button_hint">Click me</string>
	<string name="game_created_activity_group_five_text_view_text">9:41 AM</string>
	<string name="game_created_activity_return_to_dashboard_text_view_hint">RETURN TO DASHBOARD</string>
	<string name="game_created_activity_group_five_text_view_hint">9:41 AM</string>
	<string name="game_created_activity_group_three_text_view_text">Vodacom</string>
	<string name="game_created_activity_game_creator_text_view_hint">Game Creator</string>
	<string name="game_created_activity_group_two_text_view_hint">9:41 AM</string>
	<string name="game_created_activity_your_game_has_been_text_view_hint">Your Game Has \nBeen Created</string>
	<string name="game_created_activity_group_three_text_view_hint">Vodacom</string>
	<string name="game_created_activity_your_game_has_been_text_view_text">Your Game Has \nBeen Created</string>
	<string name="game_created_activity_group_six_text_view_text">Vodacom</string>
	<string name="game_created_activity_group_four_text_view_hint">42%</string>
	<string name="reset_password_activity_edit_text_edit_text_hint">Password</string>
	<string name="reset_password_activity_reset_password_text_view_text">Reset Password</string>
	<string name="reset_password_activity_confirm_password_text_view_text">Confirm Password</string>
	<string name="reset_password_activity_group_two_text_view_text">9:41 AM</string>
	<string name="reset_password_activity_group_two_text_view_hint">9:41 AM</string>
	<string name="reset_password_activity_group_six_text_view_text">Vodacom</string>
	<string name="reset_password_activity_group_six_text_view_hint">Vodacom</string>
	<string name="reset_password_activity_new_password_text_view_text">New Password</string>
	<string name="reset_password_activity_group_four_text_view_text">42%</string>
	<string name="reset_password_activity_group_five_text_view_hint">9:41 AM</string>
	<string name="reset_password_activity_new_password_text_view_hint">New Password</string>
	<string name="reset_password_activity_group_three_text_view_text">Vodacom</string>
	<string name="reset_password_activity_group2692_button_hint">RESET</string>
	<string name="reset_password_activity_group2692_button_text">RESET</string>
	<string name="reset_password_activity_group_text_view_text">42%</string>
	<string name="reset_password_activity_edit_text_two_edit_text_hint">Password</string>
	<string name="reset_password_activity_group_five_text_view_text">9:41 AM</string>
	<string name="reset_password_activity_group_three_text_view_hint">Vodacom</string>
	<string name="reset_password_activity_group_four_text_view_hint">42%</string>
	<string name="reset_password_activity_confirm_password_text_view_hint">Confirm Password</string>
	<string name="reset_password_activity_reset_password_text_view_hint">Reset Password</string>
	<string name="reset_password_activity_group_text_view_hint">42%</string>
	<string name="opening_activity_login_button_text">SIGN UP</string>
	<string name="opening_activity_group2777_button_hint">SIGN IN</string>
	<string name="opening_activity_login_button_hint">SIGN UP</string>
	<string name="opening_activity_group2777_button_text">SIGN IN</string>
	<string name="my_games_activity_group_text_view_text">42%</string>
	<string name="sign_up_landing_activity_group2779_button_text">FACEBOOK</string>
	<string name="sign_up_landing_activity_group2777_button_text">EMAIL</string>
	<string name="sign_up_landing_activity_sign_up_text_view_text">Sign Up</string>
	<string name="sign_up_landing_activity_group2780_button_text">APPLE</string>
	<string name="sign_up_landing_activity_group2778_button_text">GOOGLE</string>
	<string name="sign_up_landing_activity_by_continuing_you_atext_view_text">By continuing, you agree to Terms &amp; Conditions</string>
</resources>