<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraint_layout_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/sign_up_landing_activity_constraint_layout_constraint_layout_background_color">

	<ImageView
		android:id="@+id/group2776_image_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/sign_up_landing_activity_group2776_image_view_margin_top"
		android:scaleType="centerCrop"
		android:src="@drawable/group_2776_4"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="38dp"
		tools:layout_editor_absoluteY="-77dp"/>

	<Button
		android:id="@+id/group2777_button"
		android:layout_width="@dimen/sign_up_landing_activity_group2777_button_width"
		android:layout_height="@dimen/sign_up_landing_activity_group2777_button_height"
		android:layout_marginTop="@dimen/sign_up_landing_activity_group2777_button_margin_top"
		android:background="@drawable/sign_up_landing_activity_group2777_button_ripple"
		android:fontFamily="@font/font_nunitosans_bold"
		android:gravity="start"
		android:text="@string/sign_up_landing_activity_group2777_button_text"
		android:textColor="@color/sign_up_landing_activity_group2777_button_text_color"
		android:textSize="@dimen/sign_up_landing_activity_group2777_button_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/group2776_image_view"
		tools:layout_editor_absoluteX="60dp"
		tools:layout_editor_absoluteY="235dp"/>

	<Button
		android:id="@+id/group2778_button"
		android:layout_width="@dimen/sign_up_landing_activity_group2778_button_width"
		android:layout_height="@dimen/sign_up_landing_activity_group2778_button_height"
		android:layout_marginTop="@dimen/sign_up_landing_activity_group2778_button_margin_top"
		android:background="@drawable/sign_up_landing_activity_group2778_button_ripple"
		android:fontFamily="@font/font_nunitosans_bold"
		android:gravity="start"
		android:text="@string/sign_up_landing_activity_group2778_button_text"
		android:textColor="@color/sign_up_landing_activity_group2778_button_text_color"
		android:textSize="@dimen/sign_up_landing_activity_group2778_button_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/group2779_button"
		tools:layout_editor_absoluteX="60dp"
		tools:layout_editor_absoluteY="381dp"/>

	<Button
		android:id="@+id/group2779_button"
		android:layout_width="@dimen/sign_up_landing_activity_group2779_button_width"
		android:layout_height="@dimen/sign_up_landing_activity_group2779_button_height"
		android:layout_marginTop="@dimen/sign_up_landing_activity_group2779_button_margin_top"
		android:background="@drawable/sign_up_landing_activity_group2779_button_ripple"
		android:fontFamily="@font/font_nunitosans_bold"
		android:gravity="start"
		android:text="@string/sign_up_landing_activity_group2779_button_text"
		android:textColor="@color/sign_up_landing_activity_group2779_button_text_color"
		android:textSize="@dimen/sign_up_landing_activity_group2779_button_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/group2777_button"
		tools:layout_editor_absoluteX="60dp"
		tools:layout_editor_absoluteY="308dp"/>

	<Button
		android:id="@+id/group2780_button"
		android:layout_width="@dimen/sign_up_landing_activity_group2780_button_width"
		android:layout_height="@dimen/sign_up_landing_activity_group2780_button_height"
		android:layout_marginTop="@dimen/sign_up_landing_activity_group2780_button_margin_top"
		android:background="@drawable/sign_up_landing_activity_group2780_button_ripple"
		android:fontFamily="@font/font_nunitosans_bold"
		android:gravity="start"
		android:text="@string/sign_up_landing_activity_group2780_button_text"
		android:textColor="@color/sign_up_landing_activity_group2780_button_text_color"
		android:textSize="@dimen/sign_up_landing_activity_group2780_button_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/group2778_button"
		tools:layout_editor_absoluteX="60dp"
		tools:layout_editor_absoluteY="454dp"/>

	<TextView
		android:id="@+id/by_continuing_you_atext_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/sign_up_landing_activity_by_continuing_you_atext_view_margin_top"
		android:fontFamily="@font/font_nunitosans_regular"
		android:gravity="center"
		android:text="@string/sign_up_landing_activity_by_continuing_you_atext_view_text"
		android:textColor="@color/sign_up_landing_activity_by_continuing_you_atext_view_text_color"
		android:textSize="@dimen/sign_up_landing_activity_by_continuing_you_atext_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/group2780_button"
		tools:layout_editor_absoluteX="101dp"
		tools:layout_editor_absoluteY="527dp"/>

	<TextView
		android:id="@+id/sign_up_text_view"
		android:layout_width="@dimen/sign_up_landing_activity_sign_up_text_view_width"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/sign_up_landing_activity_sign_up_text_view_margin_top"
		android:fontFamily="@font/font_nunitosans_regular"
		android:gravity="start"
		android:text="@string/sign_up_landing_activity_sign_up_text_view_text"
		android:textColor="@color/sign_up_landing_activity_sign_up_text_view_text_color"
		android:textSize="@dimen/sign_up_landing_activity_sign_up_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="155dp"
		tools:layout_editor_absoluteY="138dp"/>
</android.support.constraint.ConstraintLayout>